# Spectre

./: README.md  package-lock.json  package.json  svelte.config.js
.github/workflows/: publish.yml
assets/: icon.psd  logobanner.psd
src/: app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  main.rsold
src/lib/api/: friendsList.ts  getLocation.ts
src/lib/assets/: Favicon.svelte
src/lib/components/: Footer.svelte  Friends.svelte  FriendsCard.svelte  Header.svelte  Instance.svelte  Login.svelte  Login2.svelte  Me.svelte  ThemeSwitcher.svelte  UserInfo.svelte  WorldSearch.svelte  WorldSearchProp.svelte
src/lib/examples/: friends.json  wrld_ba913a96-fac4-4048-a062-9aa5db092812.json  wrld_ba913a96-fac4-4048-a062-9aa5db092813.json
src/lib/functions/: checkUserStatus.ts  loadData.ts  logout.ts
src/lib/rust/: makeRequest.ts
src/lib/stores/: auth.ts  externalUserStore.ts  friendsStore.ts  groupStore.ts  instanceStore.ts  locationStore.ts  ownAvatarStore.ts  user.ts  worldSearchStore.ts
src/lib/styles/: stars.css
src/lib/tauri/: store.ts
src/lib/types/: avatarSearch.ts  externalUser.ts  friend.ts  group.ts  instance.ts  inviteResponse.ts  ownAvatar.ts  user.ts  world.ts  worldSearch.ts
src/lib/utils/: getActiveWorlds.ts  getApiTime.ts  getCookies.ts  getCurrentUser.ts  getFriends.ts  getFriendsByInstanceId.ts  getGroupById.ts  getInstance.ts  getJoinableUsers.ts  getLocation.ts  getOnlineUsers.ts  getOwnAvatar.ts  getOwnAvatarList.ts  getUser.ts  (+7 more)
src/routes/: +layout.svelte  +page.svelte
(+24 files in other folders)
